<resources>
    <string name="app_name">Stampp</string>
    <string name="txtTipo">"   Tipo:   "</string>
    <string name="txtTalla">"   Talla:   "</string>
    <string name="txtColor">"   Color:   "</string>
    <string name="btnExaminar">Examinar</string>
    <string name="txtNombreImagen">Nombre de la imagen</string>
    <string name="txtTela">"   Tela:   "</string>
    <string name="txtSeleccionImagen">Seleccione la imagen</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="txtSolicitar">Solicitar un diseño</string>
    <string name="txtDatosprenda">Datos de la prenda</string>
    <string name="sprinTipo">seleccionar</string>
    <string name="sprinTalla">seleccionar</string>
    <string name="sprinTela">seleccionar</string>
    <string name="btnPaletaColor">Paleta colores</string>
    <string name="txtPaletaColor">Color elegido</string>
    <string name="txtUrl">URL</string>
    <string name="edtNombreImagen">Edit Nombre Imagen</string>
    <string name="encRegistroCliente">Registro como comprador Stampp</string>
    <string name="descripcion">descipcion</string>
    <string name="txtNombreUsuario">Nombre de usuario</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtFechaNacimiento">Fecha de nacimiento</string>
    <string name="txtCorreoElectronico">Correo electronico</string>
    <string name="txtContrasena">Contraseña</string>
    <string name="txtVerifContrasena">Verificar contraseña</string>
    <string name="edtNombreUsuario">Edit nombre usuario</string>
    <string name="edtNombre">Edit Nombre</string>
    <string name="edtContrasena">edtContraseña</string>
    <string name="edtVerifContrasena">Edit verificar contraseña</string>
    <string name="edtCorreoElectronico">Edit correo electronico</string>
    <string name="edtFechaNacimiento">Edit fecha de nacimiento</string>
    <string name="edtApellidos">Edit Apellidos</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnFacebook">Facebook</string>
    <string name="btnGoogle">Google</string>

</resources>