<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarClienteActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNombreUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtNombreUsuario"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edtNombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/edtNombreUsuario"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtNombre"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/edtNombre"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtApellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtApellidos"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edtApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/edtApellidos"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtFechaNacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtFechaNacimiento"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edtFechaNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/edtFechaNacimiento"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="@android:color/black"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCorreoElectronico"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtCorreoElectronico"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edtCorreoElectronico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/edtCorreoElectronico"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtContrasena"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edtContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/edtContrasena"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtVerifContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtVerifContrasena"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edtVerifContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/edtVerifContrasena"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/descripcion"
                    app:srcCompat="@drawable/facebookboton" />

                <ImageButton
                    android:id="@+id/btnGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/descripcion"
                    app:srcCompat="@drawable/googlebuton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegistrar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_light"
                    android:elevation="200dp"
                    android:text="@string/btnRegistrar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/botoncolor"
                    android:textStyle="italic"
                    android:textAlignment="center"/>
                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:orientation="horizontal"></LinearLayout>

                <Button
                    android:id="@+id/btnCancelar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_light"
                    android:elevation="200dp"
                    android:text="@string/btnCancelar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/botoncolor"
                    android:textStyle="italic"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>