<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="61dp">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSolicitar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtSolicitar"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDatosprenda"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtDatosprenda"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTipo"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtTipo"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/sprinTipo"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:layout_constraintRight_toRightOf="@+id/txtTipo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTalla"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtTalla"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/sprinTalla"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:layout_constraintRight_toRightOf="@+id/txtTalla" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtColor"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtColor"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtPaletaColor"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtPaletaColor"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:elevation="250dp"
                    android:gravity="center"
                    android:text="@string/btnPaletaColor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/botoncolor"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTela"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtTela"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/sprinTela"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:layout_constraintRight_toRightOf="@+id/txtTalla" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSeleccionImagen"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtSeleccionImagen"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtUrl"
                    android:layout_width="37dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtUrl"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btnExaminar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:elevation="250dp"
                    android:gravity="center"
                    android:text="@string/btnExaminar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/botoncolor"
                    android:textStyle="italic" />
                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNombreImagen"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/txtNombreImagen"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtNombreImagen"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:ems="10"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEnviar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:elevation="200dp"
                android:text="@string/btnEnviar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:textColor="@color/botoncolor"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btnCancelar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:elevation="200dp"
                android:text="@string/btnCancelar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:textColor="@color/botoncolor"
                android:textStyle="italic" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>